Tweak sizes to ensure wrapping.

--- a/style.css
+++ b/style.css
@@ -12,16 +12,38 @@ body {
 .root {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
+
   margin: 10px;
 }
 
-#panels-root {
+.centered-container {
+  width: 650px;
+  max-height: 750px;
+  max-width: 650px;
   flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+}
+
+/* #middle { */
+  /* align-self: center; */
+  /* display: flex; */
+  /* width: 100%; */
+  /* height: 100%; */
+/* } */
+
+#panels-root {
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
 }
@@ -106,11 +128,13 @@ input[type="text"] {
   border-radius: 10px;
   font-family: sans-serif;
   font-size: 48px;
+  min-height: 54px;
   background-color: cornflowerblue;
 }
 
 .tile:nth-child(2) {
   font-size: 72px;
+  min-height: 78px;
 }
 
 .panel {
